[package]
name = "cirrus"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^1.0"
serde_json = "1.0.58"
log = "0.4.11"
tokio = { version = "^1.0", features = ["full"] }
rusoto_core = "^0.47"
rusoto_s3 = "^0.47"
rusoto_lambda = "^0.47"
simple_logger = "1.10.0"
bytestream = "0.3.0"
serde = "^1.0"
serde-pickle = "^0.6"
futures = "0.3.5"
serde_yaml = "0.8.13"